<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sand"
    android:fitsSystemWindows="true">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top_safe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.045" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="@dimen/pause_button_size"
        android:layout_height="@dimen/pause_button_size"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_caution_panel"
        android:contentDescription="@string/cd_back"
        android:padding="11dp"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/gl_top_safe" />

    <TextView
        android:id="@+id/tv_screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:shadowColor="@color/text_outline_brown"
        android:shadowDx="0"
        android:shadowDy="3"
        android:shadowRadius="6"
        android:text="@string/leaderboard_title"
        android:textAllCaps="true"
        android:textColor="@color/text_white"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btn_back" />

    <TextView
        android:id="@+id/tv_leaderboard_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/leaderboard_hint"
        android:textColor="@color/caution_yellow"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_back" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_stats"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:clipToPadding="false"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_leaderboard_hint"
        tools:listitem="@layout/item_leaderboard_stat" />

</androidx.constraintlayout.widget.ConstraintLayout>
