<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_top_safe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.045" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_bottom_safe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.955" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start_safe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end_safe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <com.tractorfieldtrip.OutlinedTextView
        android:id="@+id/tv_level_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/erica_one"
        android:includeFontPadding="false"
        android:letterSpacing="0.04"
        android:textAllCaps="true"
        android:textColor="@color/text_white"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@id/btn_pause"
        app:layout_constraintStart_toStartOf="@id/gl_start_safe"
        app:layout_constraintTop_toTopOf="@id/btn_pause"
        app:outlineStrokeColorBottom="#722501"
        app:outlineStrokeColorTop="#D95500"
        app:outlineStrokeWidth="5dp"
        tools:text="LEVEL 3" />

    <FrameLayout
        android:id="@+id/btn_pause"
        android:layout_width="52dp"
        android:layout_height="52dp"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="@id/gl_end_safe"
        app:layout_constraintTop_toTopOf="@id/gl_top_safe">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/cd_pause"
            android:scaleType="fitXY"
            android:src="@drawable/btn_settings_plate" />

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:src="@drawable/ic_pause" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/panel_hearts"
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:background="@drawable/coin_panel_bg"
        android:contentDescription="@string/cd_lives"
        android:gravity="center"
        android:layout_marginEnd="8dp"
        android:orientation="horizontal"
        android:paddingHorizontal="12dp"
        app:layout_constraintBottom_toBottomOf="@id/btn_pause"
        app:layout_constraintEnd_toStartOf="@id/btn_pause"
        app:layout_constraintTop_toTopOf="@id/btn_pause">

        <ImageView
            android:id="@+id/iv_heart_1"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginEnd="4dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_heart" />

        <ImageView
            android:id="@+id/iv_heart_2"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginEnd="4dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_heart" />

        <ImageView
            android:id="@+id/iv_heart_3"
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:importantForAccessibility="no"
            android:src="@drawable/ic_heart" />

    </LinearLayout>

    <View
        android:id="@+id/fuel_bar"
        android:layout_width="0dp"
        android:layout_height="@dimen/fuel_bar_height"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_fuel_bar"
        android:contentDescription="@string/cd_fuel"
        app:layout_constraintEnd_toEndOf="@id/gl_end_safe"
        app:layout_constraintStart_toStartOf="@id/gl_start_safe"
        app:layout_constraintTop_toBottomOf="@id/btn_pause" />

    <ImageView
        android:id="@+id/iv_fuel_marker"
        android:layout_width="@dimen/fuel_marker_size"
        android:layout_height="@dimen/fuel_marker_size"
        android:contentDescription="@string/cd_fuel_marker"
        android:src="@drawable/item_fuel"
        app:layout_constraintBottom_toBottomOf="@id/fuel_bar"
        app:layout_constraintEnd_toEndOf="@id/fuel_bar"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="@id/fuel_bar"
        app:layout_constraintTop_toTopOf="@id/fuel_bar"
        tools:ignore="ContentDescription" />

    <FrameLayout
        android:id="@+id/maze_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/maze_top_margin"
        android:layout_marginBottom="@dimen/maze_bottom_margin"
        android:contentDescription="@string/cd_game_field"
        app:layout_constraintBottom_toTopOf="@id/row_counters"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@id/gl_end_safe"
        app:layout_constraintStart_toStartOf="@id/gl_start_safe"
        app:layout_constraintTop_toBottomOf="@id/fuel_bar"
        app:layout_constraintVertical_bias="0.5" />

    <LinearLayout
        android:id="@+id/row_counters"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="@id/gl_bottom_safe"
        app:layout_constraintEnd_toEndOf="@id/gl_end_safe"
        app:layout_constraintStart_toStartOf="@id/gl_start_safe">

        <LinearLayout
            android:id="@+id/marker_crates"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/coin_panel_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginEnd="6dp"
                android:contentDescription="@string/cd_crate_counter"
                android:src="@drawable/item_crate" />

            <com.tractorfieldtrip.OutlinedTextView
                android:id="@+id/tv_count_crates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/erica_one"
                android:textColor="@color/text_white"
                android:textSize="18sp"
                app:outlineStrokeColorBottom="#722501"
                app:outlineStrokeColorTop="#D95500"
                app:outlineStrokeWidth="3dp"
                tools:text="0/1" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/marker_sacks"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/coin_panel_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginEnd="6dp"
                android:contentDescription="@string/cd_sack_counter"
                android:src="@drawable/item_sack" />

            <com.tractorfieldtrip.OutlinedTextView
                android:id="@+id/tv_count_sacks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/erica_one"
                android:textColor="@color/text_white"
                android:textSize="18sp"
                app:outlineStrokeColorBottom="#722501"
                app:outlineStrokeColorTop="#D95500"
                app:outlineStrokeWidth="3dp"
                tools:text="1/2" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/marker_bricks"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/coin_panel_bg"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="10dp">

            <ImageView
                android:layout_width="26dp"
                android:layout_height="26dp"
                android:layout_marginEnd="6dp"
                android:contentDescription="@string/cd_brick_counter"
                android:src="@drawable/item_brick" />

            <com.tractorfieldtrip.OutlinedTextView
                android:id="@+id/tv_count_bricks"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/erica_one"
                android:textColor="@color/text_white"
                android:textSize="18sp"
                app:outlineStrokeColorBottom="#722501"
                app:outlineStrokeColorTop="#D95500"
                app:outlineStrokeWidth="3dp"
                tools:text="1/1" />

        </LinearLayout>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/game_overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clickable="false"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
